# UselessLocalization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  useless.hpp
example/: example.gm82  languages.json
example/datafiles/: index.yyd  languages.json.txt
example/datafiles/include/: languages.json
example/rooms/room1/: code.gml
example/scripts/: example.gml  tree.yyd
example/settings/: extensions.txt
src/: CMakeLists.txt  UselessLocalization.gej  api.cpp  api.gml
